// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack vault aws.config given: [case1] repo with aws.config vault configured when: [t0] keyrack list --json then: stdout matches snapshot 1`] = `
{
  "testorg.prod.AWS_PROFILE": {
    "createdAt": "__TIMESTAMP__",
    "env": "prod",
    "exid": "testorg-prod",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_AWS_SSO",
    "org": "testorg",
    "slug": "testorg.prod.AWS_PROFILE",
    "updatedAt": "__TIMESTAMP__",
    "vault": "aws.config",
    "vaultRecipient": null,
  },
  "testorg.test.AWS_PROFILE": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "testorg-test",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_AWS_SSO",
    "org": "testorg",
    "slug": "testorg.test.AWS_PROFILE",
    "updatedAt": "__TIMESTAMP__",
    "vault": "aws.config",
    "vaultRecipient": null,
  },
}
`;

exports[`keyrack vault aws.config given: [case1] repo with aws.config vault configured when: [t1] keyrack list (human readable) then: stdout matches snapshot 1`] = `
"
🔐 keyrack list
   ├─ testorg.prod.AWS_PROFILE
   │  ├─ env: prod
   │  ├─ org: testorg
   │  ├─ mech: EPHEMERAL_VIA_AWS_SSO
   │  └─ vault: aws.config
   └─ testorg.test.AWS_PROFILE
      ├─ env: test
      ├─ org: testorg
      ├─ mech: EPHEMERAL_VIA_AWS_SSO
      └─ vault: aws.config
"
`;

exports[`keyrack vault aws.config given: [case2] repo without host entry for a key when: [t0] keyrack set --key NEW_AWS_KEY --mech EPHEMERAL_VIA_AWS_SSO --vault aws.config then: stdout matches snapshot 1`] = `
{
  "createdAt": "__TIMESTAMP__",
  "env": "test",
  "exid": "testorg-test",
  "maxDuration": null,
  "mech": "EPHEMERAL_VIA_AWS_SSO",
  "org": "testorg",
  "slug": "testorg.test.NEW_AWS_KEY",
  "updatedAt": "__TIMESTAMP__",
  "vault": "aws.config",
  "vaultRecipient": null,
}
`;

exports[`keyrack vault aws.config given: [case2] repo without host entry for a key when: [t1] keyrack list after set then: stdout matches snapshot 1`] = `
{
  "testorg.prod.AWS_PROFILE": {
    "createdAt": "__TIMESTAMP__",
    "env": "prod",
    "exid": "testorg-prod",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_AWS_SSO",
    "org": "testorg",
    "slug": "testorg.prod.AWS_PROFILE",
    "updatedAt": "__TIMESTAMP__",
    "vault": "aws.config",
    "vaultRecipient": null,
  },
  "testorg.test.ANOTHER_AWS_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "testorg-test",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_AWS_SSO",
    "org": "testorg",
    "slug": "testorg.test.ANOTHER_AWS_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "aws.config",
    "vaultRecipient": null,
  },
  "testorg.test.AWS_PROFILE": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "testorg-test",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_AWS_SSO",
    "org": "testorg",
    "slug": "testorg.test.AWS_PROFILE",
    "updatedAt": "__TIMESTAMP__",
    "vault": "aws.config",
    "vaultRecipient": null,
  },
  "testorg.test.NEW_AWS_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "testorg-test",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_AWS_SSO",
    "org": "testorg",
    "slug": "testorg.test.NEW_AWS_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "aws.config",
    "vaultRecipient": null,
  },
}
`;

exports[`keyrack vault aws.config given: [case3] repo with aws.config vault when: [t0] keyrack get --key AWS_PROFILE --json (no valid sso session) then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack set --key AWS_PROFILE --env test",
  "message": "credential 'testorg.test.AWS_PROFILE' does not exist. set it first.",
  "slug": "testorg.test.AWS_PROFILE",
  "status": "absent",
}
`;

exports[`keyrack vault aws.config given: [case4] findsert semantics when: [t0] set key that already has same attrs then: stdout matches snapshot 1`] = `
{
  "createdAt": "__TIMESTAMP__",
  "env": "test",
  "exid": "testorg-test",
  "maxDuration": null,
  "mech": "EPHEMERAL_VIA_AWS_SSO",
  "org": "testorg",
  "slug": "testorg.test.AWS_PROFILE",
  "updatedAt": "__TIMESTAMP__",
  "vault": "aws.config",
  "vaultRecipient": null,
}
`;

exports[`keyrack vault aws.config given: [case6] mech inference from aws.config vault when: [t0] keyrack set --key INFERRED_KEY --vault aws.config (no --mech) then: stdout matches snapshot 1`] = `
{
  "createdAt": "__TIMESTAMP__",
  "env": "test",
  "exid": "testorg-test",
  "maxDuration": null,
  "mech": "EPHEMERAL_VIA_AWS_SSO",
  "org": "testorg",
  "slug": "testorg.test.INFERRED_KEY",
  "updatedAt": "__TIMESTAMP__",
  "vault": "aws.config",
  "vaultRecipient": null,
}
`;

exports[`keyrack vault aws.config given: [case7] profile storage with --exid when: [t0] keyrack set with --exid stores profile name then: stdout matches snapshot 1`] = `
[
  {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "my-preconfigured-profile",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_AWS_SSO",
    "org": "testorg",
    "slug": "testorg.test.AWS_PROFILE_EXID",
    "updatedAt": "__TIMESTAMP__",
    "vault": "aws.config",
    "vaultRecipient": null,
  },
]
`;

exports[`keyrack vault aws.config given: [case9] repo manifest auto-update on set when: [t0] keyrack set adds NEW_MANIFEST_KEY then: repo manifest snapshot 1`] = `
"org: testorg
env.prod:
  - AWS_PROFILE
env.test:
  - AWS_PROFILE
  - NEW_MANIFEST_KEY
"
`;

exports[`keyrack vault aws.config given: [case10] repo manifest no duplicate on re-set when: [t0] keyrack set for key already in manifest (AWS_PROFILE) then: repo manifest snapshot 1`] = `
"org: testorg

env.prod:
  - AWS_PROFILE

env.test:
  - AWS_PROFILE
"
`;

exports[`keyrack vault aws.config given: [case11] repo manifest creates env section if absent when: [t0] keyrack set for new env (prep) then: repo manifest snapshot 1`] = `
"org: testorg
env.prod:
  - AWS_PROFILE
env.test:
  - AWS_PROFILE
env.prep:
  - PREP_KEY
"
`;

exports[`keyrack vault aws.config given: [case13] guided setup with mock aws CLI when: [t0] keyrack set --vault aws.config via guided wizard (pseudo-TTY) then: stdout matches snapshot 1`] = `
"🔐 keyrack set AWS_PROFILE
   │
   ├─ which sso domain?
   │  ├─ options
   │  │  └─ 1. https://d-12345abcde.awsapps.com/start, testorg, us-east-1
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as https://d-12345abcde.awsapps.com/start, testorg
   │
   ├─ with sso prior?
   │  └─ ✓ clear, no prior session
   │
   ├─ which sso login?
   │  ├─ authorize in browser
   │  │  ├─ 🔗 https://device.sso.us-east-1.amazonaws.com/
   │  │  └─ 🔑 MOCK-CODE
   │  └─ ✓ authenticated
   │
   ├─ which account?
   │  ├─ options
   │  │  ├─ 1. testorg-dev   123456789012
   │  │  └─ 2. testorg-prod  987654321098
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as testorg-dev
   │
   ├─ which role?
   │  ├─ options
   │  │  ├─ 1. AdministratorAccess
   │  │  └─ 2. ReadOnlyAccess
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as AdministratorAccess
   │
   ├─ what should we call it?
   │  ├─ suggested
   │  │  └─ testorg.dev
   │  └─ choice
   │     └─
   │     ├─ ✓
   │     └─ as testorg.dev
   │
   ├─ lovely, lets vault it now...
   │  └─ ✓ written to ~/.aws/config
   │
   └─ perfect, now lets verify...
      ├─ ✓ unlock
      ├─ ✓ get
      └─ ✓ relock

🔐 keyrack set (org: testorg, env: test)
   └─ testorg.test.AWS_PROFILE
      ├─ mech: EPHEMERAL_VIA_AWS_SSO
      └─ vault: aws.config"
`;

exports[`keyrack vault aws.config given: [case13] guided setup with mock aws CLI when: [t1] keyrack list --json after guided set then: stdout matches snapshot 1`] = `
{
  "testorg.test.AWS_PROFILE": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "testorg.dev",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_AWS_SSO",
    "org": "testorg",
    "slug": "testorg.test.AWS_PROFILE",
    "updatedAt": "__TIMESTAMP__",
    "vault": "aws.config",
    "vaultRecipient": null,
  },
}
`;

exports[`keyrack vault aws.config given: [case13] guided setup with mock aws CLI when: [t4] keyrack get after unlock then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "test",
    "key": {
      "grade": {
        "duration": "ephemeral",
        "protection": "reference",
      },
      "secret": "testorg.dev",
    },
    "org": "testorg",
    "slug": "testorg.test.AWS_PROFILE",
    "source": {
      "mech": "EPHEMERAL_VIA_AWS_SSO",
      "vault": "aws.config",
    },
  },
  "status": "granted",
}
`;

exports[`keyrack vault aws.config given: [case14] unlock WITHOUT identity collision (valid session) when: [t0] keyrack unlock with valid SSO session (alice) then: stdout matches snapshot 1`] = `
"
🔓 keyrack unlock
   └─ testorg.test.AWS_PROFILE
      ├─ env: test
      ├─ org: testorg
      ├─ vault: aws.config
      └─ expires in: 540m

"
`;

exports[`keyrack vault aws.config given: [case15] unlock WITH identity collision (wrong user cached) when: [t0] keyrack unlock with wrong user cached (bob, need alice) then: stdout matches snapshot 1`] = `
"
🔓 keyrack unlock
   └─ testorg.test.AWS_PROFILE
      ├─ env: test
      ├─ org: testorg
      ├─ vault: aws.config
      └─ expires in: 540m

"
`;

exports[`keyrack vault aws.config given: [case16] set key WITHOUT identity collision (no prior session) when: [t0] keyrack set --vault aws.config via guided wizard (no prior session) then: stdout matches snapshot 1`] = `
"🔐 keyrack set AWS_PROFILE
   │
   ├─ which sso domain?
   │  ├─ options
   │  │  └─ 1. https://d-12345abcde.awsapps.com/start, testorg, us-east-1
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as https://d-12345abcde.awsapps.com/start, testorg
   │
   ├─ with sso prior?
   │  └─ ✓ clear, no prior session
   │
   ├─ which sso login?
   │  ├─ authorize in browser
   │  │  ├─ 🔗 https://device.sso.us-east-1.amazonaws.com/
   │  │  └─ 🔑 MOCK-CODE
   │  └─ ✓ authenticated
   │
   ├─ which account?
   │  ├─ options
   │  │  ├─ 1. testorg-dev   123456789012
   │  │  └─ 2. testorg-prod  987654321098
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as testorg-dev
   │
   ├─ which role?
   │  ├─ options
   │  │  ├─ 1. AdministratorAccess
   │  │  └─ 2. ReadOnlyAccess
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as AdministratorAccess
   │
   ├─ what should we call it?
   │  ├─ suggested
   │  │  └─ testorg.dev
   │  └─ choice
   │     └─
   │     ├─ ✓
   │     └─ as testorg.dev
   │
   ├─ lovely, lets vault it now...
   │  └─ ✓ written to ~/.aws/config
   │
   └─ perfect, now lets verify...
      ├─ ✓ unlock
      ├─ ✓ get
      └─ ✓ relock

🔐 keyrack set (org: testorg, env: test)
   └─ testorg.test.AWS_PROFILE
      ├─ mech: EPHEMERAL_VIA_AWS_SSO
      └─ vault: aws.config"
`;

exports[`keyrack vault aws.config given: [case17] set key WITH identity collision (different user cached) when: [t0] keyrack set --vault aws.config via guided wizard (bob cached, alice auth) then: stdout matches snapshot 1`] = `
"🔐 keyrack set AWS_PROFILE
   │
   ├─ which sso domain?
   │  ├─ options
   │  │  └─ 1. https://d-12345abcde.awsapps.com/start, testorg, us-east-1
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as https://d-12345abcde.awsapps.com/start, testorg
   │
   ├─ with sso prior?
   │  ├─ ✗ https://d-12345abcde.awsapps.com/start, expires 2099-01-01T00:00:00Z
   │  └─ ✓ cleared server + disk cache
   │
   ├─ which sso login?
   │  ├─ authorize in browser
   │  │  ├─ 🔗 https://device.sso.us-east-1.amazonaws.com/
   │  │  └─ 🔑 MOCK-CODE
   │  └─ ✓ authenticated
   │
   ├─ which account?
   │  ├─ options
   │  │  ├─ 1. testorg-dev   123456789012
   │  │  └─ 2. testorg-prod  987654321098
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as testorg-dev
   │
   ├─ which role?
   │  ├─ options
   │  │  ├─ 1. AdministratorAccess
   │  │  └─ 2. ReadOnlyAccess
   │  └─ choice
   │     └─ 1
   │     ├─ 1 ✓
   │     └─ as AdministratorAccess
   │
   ├─ what should we call it?
   │  ├─ suggested
   │  │  └─ testorg.dev
   │  └─ choice
   │     └─
   │     ├─ ✓
   │     └─ as testorg.dev
   │
   ├─ lovely, lets vault it now...
   │  └─ ✓ written to ~/.aws/config
   │
   └─ perfect, now lets verify...
      ├─ ✓ unlock
      ├─ ✓ get
      └─ ✓ relock

🔐 keyrack set (org: testorg, env: test)
   └─ testorg.test.AWS_PROFILE
      ├─ mech: EPHEMERAL_VIA_AWS_SSO
      └─ vault: aws.config"
`;
